--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ version: ${pom.version}
 author: bendem
 description: Send messages to other players when you find ores.
 website: ${pom.url}
+api-version: 1.13
 
 commands:
     ob:
