--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,46 @@
-# Windows image file caches
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store*
+ehthumbs.db
+Icon?
 Thumbs.db
 
-# Folder config file
-Desktop.ini
-
+# folders #
+###########
+bin/
 target/
-
-*.bat
-build_log.txt
-*.ai
-*.iml
-.idea/
+.settings/
+.classpath
+.project
+config.yml
+/dependency-reduced-pom.xml
+/global.yml
+/data.yml
