--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>be.bendem.bukkit</groupId>
 	<artifactId>OreBroadcast</artifactId>
-	<version>3.0.1</version>
+	<version>3.1.0</version>
 	<packaging>jar</packaging>
 
-	<name>Ore Broadcaster</name>
-	<url>https://github.com/graywolf336/OreBroadcast</url>
+	<name>OreBroadcast</name>
+	<url>https://github.com/FreebuildFR/OreBroadcast</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.build.number>0</project.build.number>
 	</properties>
 
 	<repositories>
@@ -27,24 +26,10 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.13.2-R0.1-SNAPSHOT</version>
+			<version>1.16.1-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-
-	<profiles>
-		<profile>
-			<id>jenkins</id>
-			<activation>
-				<property>
-					<name>env.BUILD_NUMBER</name>
-				</property>
-			</activation>
-			<properties>
-				<project.build.number>${env.BUILD_NUMBER}</project.build.number>
-			</properties>
-		</profile>
-	</profiles>
 
 	<build>
 		<directory>target</directory>
@@ -74,30 +59,6 @@
 				</configuration>
 			</plugin>
 
-			<!-- Token replacement plugin -->
-			<plugin>
-				<groupId>com.google.code.maven-replacer-plugin</groupId>
-				<artifactId>maven-replacer-plugin</artifactId>
-				<version>1.3.8</version>
-				<executions>
-					<execution>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>replace</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<file>target/classes/plugin.yml</file>
-					<replacements>
-						<replacement>
-							<token>maven-version-number</token>
-							<value>${project.version}-b${project.build.number}</value>
-						</replacement>
-					</replacements>
-				</configuration>
-			</plugin>
-
 			<!-- Jar plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -106,8 +67,9 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Built-By>graywolf336</Built-By>
-						</manifestEntries>
+							<Built-By>FreebuildFR</Built-By>
+                            <Project-Version>${project.version}</Project-Version>
+                        </manifestEntries>
 					</archive>
 				</configuration>
 			</plugin>
