--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,13 +1,14 @@
 # A list of the ores which will be broadcasted when found.
 ores:
-    - coal
-    - iron
-    - gold
-    - lapis
-    - redstone
-    - quartz
+#    - coal
+#    - iron
+#    - gold
+#    - lapis
+#    - redstone
+#    - quartz
+#    - emerald
     - diamond
-    - emerald
+    - ancient_debris
 
 # The colors to use to color the ores in the broadcast message.
 # See the end of the file for a list of available colors.
@@ -20,6 +21,7 @@ colors:
     quartz: white
     diamond: aqua
     emerald: green
+    ancient_debris: dark_aqua
 
 # The message to be broadcasted (you can use the tags {player_name}, {real_player_name},
 # {count}, {plural}, {ore}, {ore_color} and {world}).
@@ -28,7 +30,8 @@ colors:
 # + The {ore} tag will be replaced by {ore_color}{ore}.
 # + The "player_name" tag is the name of the player as it is set by different plugins,
 #   "real_player_name" is the real pseudo of the player.
-message: "&7[&eO&bR&aE&fS&7] &l{player_name}&r just found &l{count}&r block{plural} of {ore}!"
+#message: "&7[&eO&bR&aE&fS&7] &l{player_name}&r just found &l{count}&r block{plural} of {ore}!"
+message: "&6[ATTENTION] &l{player_name}&r &l{count}&r [&l&k{ore}&r]"
 
 # The text to add when more than one ore is found (Will be used to replace the {plural} tag).
 plural: s
@@ -43,15 +46,18 @@ ore-translations:
     quartz: quartz
     diamond: diamond
     emerald: emerald
+    ancient_debris: "ancient debris"
 
 # Set this to true to only activate OreBroadcast in listed worlds.
-active-per-worlds: false
+active-per-worlds: true
 
 # List of worlds where OreBroadcast is active.
 # This has no effect if `active-per-world` is set to false!
-#active-worlds:
-#    - world
-#    - world_nether
+active-worlds:
+  - world
+  - world_overworld
+  - world_overworld2
+  - ressources_overworld
 
 # Max size of a vein. If the size is greater, the vein is ignored, preventing server from freezing
 # (i.e. if mining a big structure made of a block to broadcast).
